--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "sort-by": "^1.2.0",
     "tailwindcss": "^4.0.0"
   },
